--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/default.css">
+    <script src="scripts/script.js" defer></script>
     <title>Fake Phishing Website</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
             </ul>
         </section>
 
-        <section>:
+        <section>
             <h3>How to prevent falling for it</h3>
             <ul>           
                 <li>Hover over links before you click them to see if it goes to the sight you expect.</li>
@@ -33,9 +34,9 @@
 
         <section>
             <h3>Supplementary videos</h3>
-            <ul>
-                <li><a href="https://www.youtube.com/watch?v=gWGhUdHItto" id="link">What is Phishing</a></li>
-                <li><a href="https://www.youtube.com/watch?v=XsOWczwRVuc&t=16s" id="link">What Is Phishing? How Do I Avoid the Bait?</a></li>
+            <ul id = "links">
+                <li><a href="https://www.youtube.com/watch?v=gWGhUdHItto">What is Phishing</a></li>
+                <li><a href="https://www.youtube.com/watch?v=XsOWczwRVuc&t=16s">What Is Phishing? How Do I Avoid the Bait?</a></li>
             </ul>
         </section>  
     </main>
